fixed date padding on mobile and tablet

--- a/app/assets/stylesheets/components/event_cards.css
+++ b/app/assets/stylesheets/components/event_cards.css
@@ -49,7 +49,7 @@
   color: white;
   font-weight: bold;
   margin: 0;
-  padding: 0;
+  padding: 0 0.25em 0;
   text-align: center;
   /* don't allow user to select date text */
   user-select: none;
